--- a/Views/LoginPage.xaml
+++ b/Views/LoginPage.xaml
@@ -1,12 +1,40 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewModels="clr-namespace:BusinessPortal.ViewModels"
+             x:DataType="viewModels:LoginViewModel"
              x:Class="BusinessPortal.Views.LoginPage"
-             Title="LoginPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+             Title="{Binding Title}"
+             Shell.NavBarIsVisible="False">
+
+    <VerticalStackLayout
+        Padding="30,0"
+        Spacing="25"
+        VerticalOptions="Center">
+
+        <Label
+            Text="Welcome to Business Portal"
+            FontSize="32"
+            FontAttributes="Bold"
+            HorizontalOptions="Center" 
+            SemanticProperties.HeadingLevel="Level1"/>
+
+        <Entry
+            Placeholder="Email"
+            Text="{Binding Email}"
+            Keyboard="Email" />
+
+        <Entry
+            Placeholder="Password"
+            Text="{Binding Password}"
+            IsPassword="True" />
+
+        <Button
+            Text="Login"
+            Command="{Binding LoginCommand}"
+            HorizontalOptions="Fill" 
+            SemanticProperties.Hint="Logs you into the application"/>
+
     </VerticalStackLayout>
 </ContentPage>
+
