--- a/Views/PortalPage.xaml
+++ b/Views/PortalPage.xaml
@@ -3,39 +3,52 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewModels="clr-namespace:BusinessPortal.ViewModels"
              x:Class="BusinessPortal.Views.PortalPage"
-             Title="Services Portal">
-
-    <ContentPage.BindingContext>
-        <viewModels:PortalViewModel />
-    </ContentPage.BindingContext>
+             Title="{Binding Title}"
+             x:DataType="viewModels:PortalViewModel">
 
     <ScrollView>
-        <VerticalStackLayout Spacing="20" Padding="20">
-            <Label 
-                Text="Welcome to your Business Portal!"
-                FontSize="24"
-                FontAttributes="Bold"
-                HorizontalOptions="Center" />
+        <VerticalStackLayout
+            Spacing="25"
+            Padding="30,0"
+            VerticalOptions="Center">
 
             <Label 
-                Text="Select a service to get started."
-                FontSize="16"
+                Text="Welcome to the Business Portal!"
+                SemanticProperties.HeadingLevel="Level1"
+                FontSize="32"
                 HorizontalOptions="Center" />
 
-            <CollectionView ItemsSource="{Binding Services}">
-                <CollectionView.ItemTemplate>
-                    <DataTemplate>
-                        <Frame Padding="15" CornerRadius="10" HasShadow="True" Margin="0,10">
-                            <VerticalStackLayout>
-                                <Label Text="{Binding Name}" FontSize="18" FontAttributes="Bold" />
-                                <Label Text="{Binding Description}" FontSize="14" />
-                            </VerticalStackLayout>
-                        </Frame>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
+            <!-- This section now correctly binds to the CurrentUser property in the ViewModel -->
+            <VerticalStackLayout Spacing="10">
+                <Label Text="Current User Information:" FontSize="18" FontAttributes="Bold" />
+                <Label>
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <Span Text="Name: " FontAttributes="Bold" />
+                            <Span Text="{Binding CurrentUser.Name}" />
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
+                <Label>
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <Span Text="Email: " FontAttributes="Bold" />
+                            <Span Text="{Binding CurrentUser.Email}" />
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
+                <Label>
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <Span Text="Roles: " FontAttributes="Bold" />
+                            <Span Text="{Binding CurrentUser.Roles[0]}" />
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
+            </VerticalStackLayout>
 
         </VerticalStackLayout>
     </ScrollView>
+
 </ContentPage>
 
